--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@tippyjs/react": "^4.2.6",
     "antd": "^5.5.0",
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "normalize.css": "^8.0.1",
